@@ -1,3 +1,9 @@
+2005-10-16
+<pablo@netfilter.org>
+	o Rename libct_proto.h to conntrack.h
+	o Remove config.h.in from svn, it's autogenerated by the autocrap :)
+	o Remove dead functions in the SCTP protocol helper
+
 2005-10-14
 <pablo@netfilter.org>
 	o Kill config.h.in, it's generated by the autocrap
